Fixed icon popup.

--- a/carousel.css
+++ b/carousel.css
@@ -12,7 +12,7 @@ body {
     padding: 0;
     width: 100vw;
     height: 100vh;
-    overflow: hidden; /* Fixes the axis bar problem */
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,7 +58,7 @@ body {
 
 .ring-sector:hover {
     background: var(--accent-color);
-    padding-right: 45px;
+    padding-right: 37px;
 }
 
 .icon {
